--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   }
 }
 </script>
+    <script src="https://js-cdn.music.apple.com/musickit/v3/musickit.js"></script>
   </head>
   <body>
     <div id="root"></div>
